[package]
name = "videohash"
version = "0.1.0"
edition = "2021"

[lib]
name = "videohash"
path = "src/lib.rs"

[dependencies]
actix-web = "4.9.0"
blake3 = "1.5.4"
ffmpeg-next = "7.0.4"
image = "0.24"
imagehash = "0.3.0"
img_hash = "3.2.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
vid2img = "0.1.1"

